# autobalancing-robot

./: .gitignore  Dockerfile  Makefile  README.md  build-tensorflow.sh  connections.md  docker_makefile
.github/workflows/: build.yml
br_external/: Config.in  external.desc
br_external/board/: cmdline.txt  config.txt  interfaces  post-build.sh  post-image.sh  sshd_config  wpa_supplicant.conf
br_external/board/init.d/: S80modules
br_external/board/overlays/: motor-driver-overlay.dts
br_external/configs/: autobalancer_defconfig  ml_autobalancer_defconfig  pid_autobalancer_defconfig
br_external/package/autobalancer/: Config.in
br_external/package/autobalancer-ml/: autobalancer-ml.mk
br_external/package/autobalancer-pid/: autobalancer-pid.mk
br_external/package/motor-driver/: Config.in  motor-driver.mk
br_external/package/tensorflow-lite/: Config.in  tensorflow-lite.mk
br_external/src/ml/: CMakeLists.txt  build-tensorflow.sh  dmp.hpp  i2cDevice.cpp  i2cDevice.hpp  imu.cpp  imu.hpp  logger.hpp  main.cpp  timer.cpp  timer.hpp
br_external/src/motor-driver/: Makefile  motor-driver.c  motor-driver.h
br_external/src/pid/: CMakeLists.txt  i2cDevice.cpp  i2cDevice.hpp  imu.cpp  imu.hpp  logger.hpp  main.cpp  pid.cpp  pid.hpp  timer.cpp
training/: self_balancing_robot.py
